--- a/pages/more/mla.html
+++ b/pages/more/mla.html
@@ -112,7 +112,7 @@
     </div>
 
     <div class="governer">
-        <table class="table table-hover">
+        <!-- <table class="table table-hover">
 
             <thead>
                 <tr>
@@ -3459,7 +3459,9 @@
                 </tr>
             </tbody>
 
-        </table>
+        </table> -->
+
+        
     </div>
     <script src="../../assets/javascript/mla_list.js"></script>
     <!-- footer  section-->
