--- a/pages/admin/like_list.html
+++ b/pages/admin/like_list.html
@@ -1,79 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      .cards-list {
-        z-index: 0;
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-      }
 
-      .card {
-        margin: 30px auto;
-        width: 300px;
-        height: 300px;
-        border-radius: 40px;
-        box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
-          -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
-        cursor: pointer;
-        transition: 0.4s;
-      }
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <style>
+    html,
+    body {
+      background: #1a1a1a;
+      font-family: 'Lato', sans-serif;
+    }
 
-      .card .card_image {
-        width: inherit;
-        height: inherit;
-        border-radius: 40px;
-      }
+    /* ------------ Document Styling End ------- */
 
-      .card .card_image img {
-        width: inherit;
-        height: inherit;
-        border-radius: 40px;
-        object-fit: cover;
-      }
+    .card-container {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      margin-top: 150px;
+    }
 
-      .card .card_title {
-        text-align: center;
-        border-radius: 0px 0px 40px 40px;
-        font-weight: bold;
-        font-size: 30px;
-        margin-top: -80px;
-        height: 40px;
-      }
+    .card {
+      height: 200px;
+      width: 400px;
+      display: inline-flex;
+      justify-content: center;
+      text-decoration: none;
+    }
 
-      .card:hover {
-        transform: scale(0.9, 0.9);
-        box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
-          -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
-      }
+    .card-top {
+      border-radius: 8px;
+      width: 400px;
+      background: white;
+      height: 200px;
+      position: absolute;
+      z-index: 8;
+      transition: transform .5s;
+      box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    }
 
-      .title-white {
-        color: white;
-      }
+    .card1 img{
+      background-size: cover;
+      border: 3px solid white;
+      border-radius: 10px;
+      width: 100%;
+      height: 100%;
+    }
 
-      .title-black {
-        color: black;
-      }
+    .card:hover .card-top {
+      transform: translateY(-120px);
+    }
 
-      @media all and (max-width: 500px) {
-        .card-list {
-          /* On small screens, we are no longer using row direction but column */
-          flex-direction: column;
-        }
-      }
-    </style>
-  </head>
+    .card-bottom {
+      background: #FAF9F6;
+      width: 100%;
+      height: 200px;
+      border-radius: 8px;
+    }
 
-  <body>
-    <div class="cards-list">
-      
-    </div>
-    <script src="../../assets/javascript/like_list.js"></script>
-  </body>
+    .card-contents {
+      color: black;
+      padding: 90px 20px 0px 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .card-contents p {
+      margin: 7px 0px;
+    }
+
+    .card-title {
+      font-weight: bold;
+      font-size: 1.3em;
+    }
+  </style>
+</head>
+
+<body>
+
+  <div class="card-container">
+   
+  </div>
+  <script src="../../assets/javascript/like_list.js"></script>
+</body>
+
 </html>
