--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@
 
     </script> -->
 
+    <a href="admin/admin_dashboard.html">fa fa-heart</a>
+
     <script src="main.js"></script>
 
     <script src="assets/javascript/translate.js"></script>
