--- a/pages/more/Governer list.html
+++ b/pages/more/Governer list.html
@@ -1000,7 +1000,7 @@
                 <td>6 May 1946</td>
                 <td>September 7, 1948</td>
             </tr>
-        </table> --> -->
+        </table> -->
     </div>
 
 
