--- a/admin/admin_dashboard.html
+++ b/admin/admin_dashboard.html
@@ -46,7 +46,7 @@
                         <!-- Menu -->
                         <div class="dropdown-menu dropdown-menu-end" aria-labelledby="sidebarAvatar">
                             <a href="#" class="dropdown-item">Profile</a>
-                            
+
                             <hr class="dropdown-divider">
                             <a href="#" class="dropdown-item">Logout</a>
                         </div>
@@ -62,7 +62,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="pages/leader_portfoie/profile_list_page.html">
                                 <i class="bi bi-bar-chart"></i> create list
                             </a>
                         </li>
@@ -180,16 +180,14 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="card-footer border-0 py-5">
-                            <span class="text-muted text-sm">Showing 10 items out of 250 results found</span>
-                        </div>
+
                     </div>
                 </div>
             </main>
         </div>
     </div>
 
-    <script>
+    <!-- <script>
 
 
         // Create the table row element
@@ -267,7 +265,7 @@
         tableBody.appendChild(tr);
 
 
-    </script>
+    </script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
