--- a/pages/portfolio/stick.html
+++ b/pages/portfolio/stick.html
@@ -15,319 +15,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-
-
-
-        .wrapper {
-            height: 100%;
-            width: 300px;
-            position: relative;
-        }
-
-
-        .wrapper .menu-btn i {
-            position: absolute;
-            transform: scale(0.9);
-            font-size: 23px;
-            transition: all 0.3s ease;
-        }
-
-        .wrapper .menu-btn i.fa-times {
-            opacity: 0;
-        }
-
-        #btn:checked~.menu-btn i.fa-times {
-            opacity: 1;
-            transform: rotate(-180deg);
-        }
-
-
-        #sidebar {
-            position: fixed;
-            background: #404040;
-            height: 100%;
-            width: 270px;
-            transition: all 0.3s ease;
-        }
-
-        #sidebar .title {
-            line-height: 65px;
-            text-align: center;
-            background: #333;
-            font-size: 25px;
-            font-weight: 600;
-            color: #f2f2f2;
-            border-bottom: 1px solid #222;
-        }
-
-        #sidebar .list-items {
-            position: relative;
-            background: #404040;
-            width: 100%;
-            height: 100%;
-            list-style: none;
-        }
-
-        #sidebar .list-items li {
-            /* padding-left: 40px;  */
-            padding: ;
-            line-height: 50px;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            border-bottom: 1px solid #333;
-            transition: all 0.3s ease;
-        }
-
-        #sidebar .list-items li img {
-            width: 200px;
-            height: 250px;
-            padding: 20px 10px;
-        }
-
-        #sidebar .list-items li:hover {
-            border-top: 1px solid transparent;
-            border-bottom: 1px solid transparent;
-            box-shadow: 0 0px 10px 3px #222;
-        }
-
-        #sidebar .list-items li:first-child {
-            border-top: none;
-        }
-
-        #sidebar .list-items li a {
-            color: #f2f2f2;
-            text-decoration: none;
-            font-size: 18px;
-            font-weight: 500;
-            height: 100%;
-            width: 100%;
-            display: block;
-        }
-
-        #sidebar .list-items li a i {
-            margin-right: 20px;
-        }
-
-        #sidebar .list-items .icons {
-            width: 100%;
-            height: 40px;
-            text-align: center;
-            position: absolute;
-            bottom: 100px;
-            line-height: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        #sidebar .list-items .icons a {
-            height: 100%;
-            width: 40px;
-            display: block;
-            margin: 0 5px;
-            font-size: 18px;
-            color: #f2f2f2;
-            background: #4a4a4a;
-            border-radius: 5px;
-            border: 1px solid #383838;
-            transition: all 0.3s ease;
-        }
-
-        #sidebar .list-items .icons a:hover {
-            background: #404040;
-        }
-
-        .list-items .icons a:first-child {
-            margin-left: 0px;
-        }
-
-        .content {
-            margin-left: 20%;
-        }
-
-        /* commend start */
-
-        .cmd {
-            font-size: 20px;
-            text-align: center;
-            padding: 10px;
-            font-weight: 700;
-        }
-
-        #comments-list {
-            list-style: none;
-            padding: 0;
-
-
-        }
-
-        #comments-list li {
-            margin-bottom: 20px;
-            border-radius: 20px;
-            padding: 20px;
-            background-image: linear-gradient(95.2deg, rgba(173, 252, 234, 1) 26.8%, rgba(192, 229, 246, 1) 64%);
-            box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-            width: 45%;
-            position: relative;
-        }
-
-        #comments-list li:before {
-            content: "";
-            position: absolute;
-            right: 100%;
-            top: 50%;
-            border-style: solid;
-            border-width: 10px 15px 10px 0;
-            border-color: transparent #c0e5f6 transparent transparent;
-            transform: translateY(-50%);
-        }
-
-
-        #comments-list li .comment-header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            margin-bottom: 10px;
-        }
-
-        #comments-list li .comment-header h3 {
-            margin: 0;
-            font-size: 1.2em;
-            font-weight: bold;
-            color: #333;
-        }
-
-        #comments-list li .comment-header span {
-            font-size: 0.8em;
-            color: #999;
-        }
-
-        #comments-list li p {
-            margin-top: 5px;
-            color: #333;
-        }
-
-
-
-        #comment-form {
-            margin-top: 20px;
-            width: 50%;
-        }
-
-        #comment-form label {
-            display: block;
-            margin-bottom: 10px;
-            font-weight: bold;
-            color: #333;
-            font-size: 1.2em;
-        }
-
-        #comment-form input[type="text"],
-        #comment-form textarea {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            font-size: 1em;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            margin-bottom: 20px;
-        }
-
-        #comment-form input[type="submit"] {
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            padding: 10px 20px;
-            font-size: 1em;
-            cursor: pointer;
-        }
-
-        #comment-form input[type="submit"]:hover {
-            background-color: #0069d9;
-        }
-
-        #comment-form input[type="submit"]:active {
-            background-color: #005cbf;
-        }
-
-        #comment-form input[type="submit"]:focus {
-            outline: none;
-        }
-    </style>
-    <style>
-        /*
-   general styles
-*/
-        .center-block-horiz {
-            margin-left: auto !important;
-            margin-right: auto !important;
-        }
-
-        .set-margin-cicis-menu-to-go {
-            margin: 20px;
-        }
-
-        .set-padding-cicis-menu-to-go {
-            padding: 20px;
-        }
-
-        .set-border-cicis-menu-to-go {
-            border: 5px inset #4f4f4f;
-        }
-
-        .set-box-shadow-cicis-menu-to-go {
-            -webkit-box-shadow: 4px 4px 14px #4f4f4f;
-            -moz-box-shadow: 4px 4px 14px #4f4f4f;
-            box-shadow: 4px 4px 14px #4f4f4f;
-        }
-
-        /* css commmon to all iframes */
-
-        .responsive-wrapper {
-            position: relative;
-            height: 0;
-            overflow: hidden;
-
-        }
-
-        .responsive-wrapper img,
-        .responsive-wrapper object,
-        .responsive-wrapper iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-
-            border-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        /*
-    css particular to this iframe
-*/
-
-        #Iframe-Cicis-Menu-To-Go {
-            max-width: 666.67px;
-            max-height: 600px;
-            overflow: hidden;
-        }
-
-        /*
-   padding-bottom = h/w as %
-*/
-        .responsive-wrapper-padding-bottom-90pct {
-            padding-bottom: 85%;
-        }
-    </style>
+   <link rel="stylesheet" href="../../assets/css/leader_profile.css">
 
 
 </head>
@@ -336,38 +24,14 @@
     <div class="wrapper">
         <nav id="sidebar">
 
-            <!-- <div class="icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-github"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
-                </div> -->
-            </ul>
         </nav>
     </div>
     <div class="content">
 
 
-        <div class="headprofile">
+        <div class="headprofile" id="headprofile">
 
         </div>
-        <!-- <div id="Iframe-Cicis-Menu-To-Go"
-            class="set-margin-cicis-menu-to-go set-padding-cicis-menu-to-go set-border-cicis-menu-to-go set-box-shadow-cicis-menu-to-go center-block-horiz">
-            <div class="responsive-wrapper 
-           responsive-wrapper-padding-bottom-90pct" style="-webkit-overflow-scrolling: touch; overflow: auto;">
-                <iframe src="https://drive.google.com/file/d/1zTTzPu0NyVDHI3mWt00O-VZRkpsKNju8/preview">
-                    <p style="font-size: 110%;"><em><strong>ERROR: </strong>
-                            An &#105;frame should be displayed here but your browser version does not support
-                            &#105;frames.</em> Please update your browser to its most recent version and try again, or
-                        access the file <a href="https://drive.google.com/file/d/0BxrMaW3xINrsR3h2cWx0OUlwRms/preview"
-                            with this link.</a></p>
-                </iframe>
-            </div>
-        </div> -->
-
-
-        <!-- cm content page  -->
-
 
         <div class="cm-total-content">
 
