feat: add a new page admin

--- a/admin/pages/leader_portfoie/politicin_create.html
+++ b/admin/pages/leader_portfoie/politicin_create.html
@@ -251,13 +251,16 @@
                         <!-- Nav -->
                         <ul class="nav nav-tabs mt-4 overflow-x border-0">
                             <li class="nav-item ">
-                                <a href="#" class="nav-link active">All files</a>
+                                <a href="profile_list_page.html" class="nav-link active">Mp list</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link font-regular">Shared</a>
+                                <a href="mla_admin_list.html" class="nav-link font-regular">MLA list</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link font-regular">File requests</a>
+                                <a href="#" class="nav-link font-regular">Governer list</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link font-regular">Past leaders</a>
                             </li>
                         </ul>
                     </div>
