--- a/admin/pages/leader_portfoie/profile_list_page.html
+++ b/admin/pages/leader_portfoie/profile_list_page.html
@@ -322,7 +322,7 @@
                                         </span>
                                         <span>Edit</span>
                                     </a>
-                                    <a href="#" class="btn d-inline-flex btn-sm btn-primary mx-1">
+                                    <a href="politicin_create.html" class="btn d-inline-flex btn-sm btn-primary mx-1">
                                         <span class=" pe-2">
                                             <i class="bi bi-plus"></i>
                                         </span>
