--- a/pages/portfolio/stick.html
+++ b/pages/portfolio/stick.html
@@ -61,7 +61,7 @@
     <script src="../../main.js"></script>
 
     <script src="../../assets/javascript/profile.js"></script>
-
+<!-- 
     <script>
 
         function handleFormSubmit(event) {
@@ -147,7 +147,7 @@
             submit_btn.style.display = "none"
         }
 
-    </script>
+    </script> -->
 
 
     <!-- script for bootstrap -->
