--- a/admin/admin_dashboard.html
+++ b/admin/admin_dashboard.html
@@ -70,7 +70,7 @@
                             <a class="nav-link" href="#">
                                 <i class="bi bi-chat"></i> comments
                                 <span
-                                    class="badge bg-soft-primary text-primary rounded-pill d-inline-flex align-items-center ms-auto">6</span>
+                                    class="badge bg-soft-primary text-primary rounded-pill d-inline-flex align-items-center ms-auto">0</span>
                             </a>
                         </li>
                         <li class="nav-item">
@@ -130,7 +130,7 @@
                                         </span>
                                         <span>Edit</span>
                                     </a>
-                                    <a href="#" class="btn d-inline-flex btn-sm btn-primary mx-1">
+                                    <a href="pages/leader_portfoie/politicin_create.html" class="btn d-inline-flex btn-sm btn-primary mx-1">
                                         <span class=" pe-2">
                                             <i class="bi bi-plus"></i>
                                         </span>
@@ -167,11 +167,11 @@
                             <table class="table table-hover table-nowrap">
                                 <thead class="thead-light">
                                     <tr>
-                                        <th scope="col">Name</th>
-                                        <th scope="col">Date</th>
-                                        <th scope="col">Company</th>
-                                        <th scope="col">Offer</th>
-                                        <th scope="col">Meeting</th>
+                                        <th scope="col">date</th>
+                                        <th scope="col">list</th>
+                                        <th scope="col">list type</th>
+                                        <th scope="col">status</th>
+                                        <th scope="col">status</th>
                                         <th></th>
                                     </tr>
                                 </thead>
