--- a/admin/pages/leader_portfoie/mla_admin_list.html
+++ b/admin/pages/leader_portfoie/mla_admin_list.html
@@ -334,7 +334,7 @@
                         <!-- Nav -->
                         <ul class="nav nav-tabs mt-4 overflow-x border-0">
                             <li class="nav-item ">
-                                <a href="#" class="nav-link active">Mp list</a>
+                                <a href="profile_list_page.html" class="nav-link active">Mp list</a>
                             </li>
                             <li class="nav-item">
                                 <a href="#" class="nav-link font-regular" onclick="mlalist()">MLA list</a>
