--- a/pages/portfolio/stick.html
+++ b/pages/portfolio/stick.html
@@ -15,7 +15,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-   <link rel="stylesheet" href="../../assets/css/leader_profile.css">
+    <link rel="stylesheet" href="../../assets/css/leader_profile.css">
 
 
 </head>
@@ -61,7 +61,7 @@
     <script src="../../main.js"></script>
 
     <script src="../../assets/javascript/profile.js"></script>
-<!-- 
+
     <script>
 
         function handleFormSubmit(event) {
@@ -147,7 +147,7 @@
             submit_btn.style.display = "none"
         }
 
-    </script> -->
+    </script>
 
 
     <!-- script for bootstrap -->
